--- a/Translation/UI.json
+++ b/Translation/UI.json
@@ -1360,7 +1360,7 @@
         "de":"",
         "jp":"",
         "pt":"",
-        "vi":"",
+        "vi":"Phòng Thủ Thần Thánh",
         "ar":"",
         "it":"",
         "pl":"",
@@ -1379,7 +1379,7 @@
         "de":"",
         "jp":"",
         "pt":"",
-        "vi":"",
+        "vi":"Thần Thủ",
         "ar":"",
         "it":"",
         "pl":"",
@@ -3317,7 +3317,7 @@
         "de":"",
         "jp":"",
         "pt":"",
-        "vi":"",
+        "vi":"Dịch chuyển đến bản đồ này sẽ tốn: {0} x1",
         "ar":"",
         "it":"",
         "pl":"",
@@ -6091,7 +6091,7 @@
         "de":"",
         "jp":"",
         "pt":"",
-        "vi":"",
+        "vi":"Chuyển Khoản",
         "ar":"",
         "it":"",
         "pl":"",
@@ -6110,7 +6110,7 @@
         "de":"",
         "jp":"",
         "pt":"",
-        "vi":"",
+        "vi":"Ngọc Đính",
         "ar":"",
         "it":"",
         "pl":"",
@@ -6186,7 +6186,7 @@
         "de":"",
         "jp":"",
         "pt":"",
-        "vi":"",
+        "vi":"Sử dụng trang bị không khóa",
         "ar":"",
         "it":"",
         "pl":"",
@@ -6205,7 +6205,7 @@
         "de":"",
         "jp":"",
         "pt":"",
-        "vi":"",
+        "vi":"Cảnh báo! Sử dụng vật phẩm bị khóa sẽ khóa trang bị, kể cả khi bạn không có bất kỳ trang bị khóa nào trên người bạn.",
         "ar":"",
         "it":"",
         "pl":"",
