--- a/Translation/tooltip.json
+++ b/Translation/tooltip.json
@@ -220,7 +220,7 @@
         "de":"",
         "jp":"",
         "pt":"",
-        "vi":"",
+        "vi":"Thưởng Thêm",
         "ar":"",
         "it":"",
         "pl":"",
