--- a/Translation/item.json
+++ b/Translation/item.json
@@ -4920,6 +4920,63 @@
         "th":"",
         "id":""
     },
+    "item.3801.name":{
+        "en":"[Spirit Egg] Immortal",
+        "fr":"[Oeuf d'esprit] Immortel",
+        "es":"",
+        "zh-cn":"",
+        "zh-tw":"",
+        "kr":"",
+        "ru":"",
+        "tr":"",
+        "de":"",
+        "jp":"",
+        "pt":"",
+        "vi":"",
+        "ar":"",
+        "it":"",
+        "pl":"",
+        "th":"",
+        "id":""
+    },
+    "item.3802.name":{
+        "en":"[Spirit Egg] Sacred unicorn",
+        "fr":"[Oeuf d'esprit] Licorne Sacré",
+        "es":"",
+        "zh-cn":"",
+        "zh-tw":"",
+        "kr":"",
+        "ru":"",
+        "tr":"",
+        "de":"",
+        "jp":"",
+        "pt":"",
+        "vi":"",
+        "ar":"",
+        "it":"",
+        "pl":"",
+        "th":"",
+        "id":""
+    },
+    "item.3803.name":{
+        "en":"[Spirit Egg] Wizardry Lord",
+        "fr":"[Oeuf d'esprit] Seigneur de la Sorcellerie",
+        "es":"",
+        "zh-cn":"",
+        "zh-tw":"",
+        "kr":"",
+        "ru":"",
+        "tr":"",
+        "de":"",
+        "jp":"",
+        "pt":"",
+        "vi":"",
+        "ar":"",
+        "it":"",
+        "pl":"",
+        "th":"",
+        "id":""
+    },
     "item.4000.name":{
         "en":"Pudding Slime",
         "fr":"Slime Pudding",
@@ -6244,6 +6301,63 @@
         "jp":"",
         "pt":"",
         "vi":"Vong Hồn Khổ Đau",
+        "ar":"",
+        "it":"",
+        "pl":"",
+        "th":"",
+        "id":""
+    },
+    "item.4801.name":{
+        "en":"Immortal",
+        "fr":"Immortel",
+        "es":"",
+        "zh-cn":"",
+        "zh-tw":"",
+        "kr":"",
+        "ru":"",
+        "tr":"",
+        "de":"",
+        "jp":"",
+        "pt":"",
+        "vi":"",
+        "ar":"",
+        "it":"",
+        "pl":"",
+        "th":"",
+        "id":""
+    },
+    "item.4802.name":{
+        "en":"Sacred unicorn",
+        "fr":"Licorne Sacré",
+        "es":"",
+        "zh-cn":"",
+        "zh-tw":"",
+        "kr":"",
+        "ru":"",
+        "tr":"",
+        "de":"",
+        "jp":"",
+        "pt":"",
+        "vi":"",
+        "ar":"",
+        "it":"",
+        "pl":"",
+        "th":"",
+        "id":""
+    },
+    "item.4803.name":{
+        "en":"Wizardry Lord",
+        "fr":"Seigneur de la Sorcellerie",
+        "es":"",
+        "zh-cn":"",
+        "zh-tw":"",
+        "kr":"",
+        "ru":"",
+        "tr":"",
+        "de":"",
+        "jp":"",
+        "pt":"",
+        "vi":"",
         "ar":"",
         "it":"",
         "pl":"",
