--- a/Translation/UI.json
+++ b/Translation/UI.json
@@ -6205,7 +6205,7 @@
         "de":"",
         "jp":"",
         "pt":"",
-        "vi":"Cảnh báo! Sử dụng vật phẩm bị khóa sẽ khóa trang bị, kể cả khi bạn không có bất kỳ trang bị khóa nào trên người bạn.",
+        "vi":"Cảnh báo! Sử dụng vật phẩm bị khóa sẽ khóa trang bị, kể cả khi bạn không có bất kỳ trang bị bị khóa nào trên người bạn.",
         "ar":"",
         "it":"",
         "pl":"",
