--- a/Translation/item.json
+++ b/Translation/item.json
@@ -4628,7 +4628,7 @@
         "de":"",
         "jp":"",
         "pt":"",
-        "vi":"[Linh Trứng] Chân Viêm Hỏa",
+        "vi":"[Linh Trứng] Viêm Ma Chân Hỏa",
         "ar":"",
         "it":"",
         "pl":"",
@@ -5958,7 +5958,7 @@
         "de":"",
         "jp":"",
         "pt":"",
-        "vi":"Chân Viêm Hỏa",
+        "vi":"Viêm Ma Chân Hỏa",
         "ar":"",
         "it":"",
         "pl":"",
