--- a/Translation/map.json
+++ b/Translation/map.json
@@ -391,7 +391,7 @@
         "de":"",
         "jp":"",
         "pt":"",
-        "vi":"",
+        "vi":"Buồng Của Kerr",
         "ar":"",
         "it":"",
         "pl":"",
@@ -695,7 +695,7 @@
         "de":"",
         "jp":"",
         "pt":"",
-        "vi":"",
+        "vi":"Chiến Khu Sa Mạc",
         "ar":"",
         "it":"",
         "pl":"",
@@ -1075,7 +1075,7 @@
         "de":"",
         "jp":"",
         "pt":"",
-        "vi":"",
+        "vi":"Viêm Ma Tháp - Tầng 1",
         "ar":"",
         "it":"",
         "pl":"",
@@ -1094,7 +1094,7 @@
         "de":"",
         "jp":"",
         "pt":"",
-        "vi":"",
+        "vi":"Viêm Ma Tháp - Tầng 2",
         "ar":"",
         "it":"",
         "pl":"",
@@ -1113,7 +1113,7 @@
         "de":"",
         "jp":"",
         "pt":"",
-        "vi":"",
+        "vi":"Viêm Ma Tháp - Tầng 3",
         "ar":"",
         "it":"",
         "pl":"",
@@ -1132,7 +1132,7 @@
         "de":"",
         "jp":"",
         "pt":"",
-        "vi":"",
+        "vi":"Viêm Ma Tháp - Tầng 4",
         "ar":"",
         "it":"",
         "pl":"",
@@ -1151,7 +1151,7 @@
         "de":"",
         "jp":"",
         "pt":"",
-        "vi":"",
+        "vi":"Viêm Ma Tháp Thiêu Lộ",
         "ar":"",
         "it":"",
         "pl":"",
@@ -1170,7 +1170,7 @@
         "de":"",
         "jp":"",
         "pt":"",
-        "vi":"",
+        "vi":"Viêm Ma Tháp Thiêu Nộ",
         "ar":"",
         "it":"",
         "pl":"",
