--- a/Translation/skills.json
+++ b/Translation/skills.json
@@ -11,7 +11,7 @@
         "de":"",
         "jp":"",
         "pt":"",
-        "vi":"",
+        "vi":"Tấn Công Gốc",
         "ar":"",
         "it":"",
         "pl":"",
@@ -30,7 +30,7 @@
         "de":"",
         "jp":"",
         "pt":"",
-        "vi":"",
+        "vi":"Tấn Công Gốc",
         "ar":"",
         "it":"",
         "pl":"",
@@ -49,7 +49,7 @@
         "de":"",
         "jp":"",
         "pt":"",
-        "vi":"",
+        "vi":"Tấn Công Gốc",
         "ar":"",
         "it":"",
         "pl":"",
@@ -1987,7 +1987,7 @@
         "de":"",
         "jp":"",
         "pt":"",
-        "vi":"",
+        "vi":"Tăng {0}% Giảm Sát Thương cho 2 lần nhận sát thương kế tiếp. Có hiệu lực trong 5 giây.",
         "ar":"",
         "it":"",
         "pl":"",
