--- a/Translation/item.json
+++ b/Translation/item.json
@@ -12142,7 +12142,7 @@
     },
     "item.20002.name":{
         "en":"True Sight Potion",
-        "fr":"Potion de Cécité",
+        "fr":"Potion de Vision Purifiée",
         "es":"",
         "zh-cn":"真视药水",
         "zh-tw":"",
