--- a/Translation/item.json
+++ b/Translation/item.json
@@ -4419,7 +4419,7 @@
         "de":"",
         "jp":"",
         "pt":"",
-        "vi":"[Linh Trứng] Hồn Chiến Binh Byron",
+        "vi":"[Linh Trứng] Vong Linh Chiến Binh Byron",
         "ar":"",
         "it":"",
         "pl":"",
@@ -4932,7 +4932,7 @@
         "de":"",
         "jp":"",
         "pt":"",
-        "vi":"",
+        "vi":"[Linh Trứng] Kẻ Bất Tử",
         "ar":"",
         "it":"",
         "pl":"",
@@ -4951,7 +4951,7 @@
         "de":"",
         "jp":"",
         "pt":"",
-        "vi":"",
+        "vi":"[Linh Trứng] Huyền Linh Kỳ Lân",
         "ar":"",
         "it":"",
         "pl":"",
@@ -4970,7 +4970,7 @@
         "de":"",
         "jp":"",
         "pt":"",
-        "vi":"",
+        "vi":"[Linh Trứng] Chúa Tể Phép Thuật",
         "ar":"",
         "it":"",
         "pl":"",
@@ -5806,7 +5806,7 @@
         "de":"",
         "jp":"",
         "pt":"",
-        "vi":"Hồn Chiến Binh Byron",
+        "vi":"Vong Linh Chiến Binh Byron",
         "ar":"",
         "it":"",
         "pl":"",
@@ -6319,7 +6319,7 @@
         "de":"",
         "jp":"",
         "pt":"",
-        "vi":"",
+        "vi":"Kẻ Bất Tử",
         "ar":"",
         "it":"",
         "pl":"",
@@ -6338,7 +6338,7 @@
         "de":"",
         "jp":"",
         "pt":"",
-        "vi":"",
+        "vi":"Huyền Linh Kỳ Lân",
         "ar":"",
         "it":"",
         "pl":"",
@@ -6357,7 +6357,7 @@
         "de":"",
         "jp":"",
         "pt":"",
-        "vi":"",
+        "vi":"Chúa Tể Pháp Thuật",
         "ar":"",
         "it":"",
         "pl":"",
