--- a/Translation/map.json
+++ b/Translation/map.json
@@ -1196,6 +1196,25 @@
         "th":"",
         "id":""
     },
+    "map.C3_Letin_Harbor.name":{
+        "en":"Letin Harbor",
+        "fr":"Port de Letin",
+        "es":"",
+        "zh-cn":"",
+        "zh-tw":"",
+        "kr":"",
+        "ru":"",
+        "tr":"",
+        "de":"",
+        "jp":"",
+        "pt":"",
+        "vi":"",
+        "ar":"",
+        "it":"",
+        "pl":"",
+        "th":"",
+        "id":""
+    },
     "map.Challenge_35.name":{
         "en":"Cain Knight's Trial Ground",
         "fr":"Zone d'entrainement des chevaliers de Kane",
