--- a/Translation/map.json
+++ b/Translation/map.json
@@ -1075,7 +1075,7 @@
         "de":"",
         "jp":"",
         "pt":"",
-        "vi":"Viêm Ma Tháp - Tầng 1",
+        "vi":"Viêm Ma Tháp Tầng 1",
         "ar":"",
         "it":"",
         "pl":"",
@@ -1208,7 +1208,7 @@
         "de":"",
         "jp":"",
         "pt":"",
-        "vi":"",
+        "vi":"Khu Rừng Tử Nguyền",
         "ar":"",
         "it":"",
         "pl":"",
@@ -1227,7 +1227,7 @@
         "de":"",
         "jp":"",
         "pt":"",
-        "vi":"",
+        "vi":"Trung Tâm Letin",
         "ar":"",
         "it":"",
         "pl":"",
@@ -1246,7 +1246,7 @@
         "de":"",
         "jp":"",
         "pt":"",
-        "vi":"",
+        "vi":"Thánh Địa Nấm",
         "ar":"",
         "it":"",
         "pl":"",
@@ -1265,7 +1265,7 @@
         "de":"",
         "jp":"",
         "pt":"",
-        "vi":"",
+        "vi":"Cảng Letin",
         "ar":"",
         "it":"",
         "pl":"",
@@ -1284,7 +1284,7 @@
         "de":"",
         "jp":"",
         "pt":"",
-        "vi":"",
+        "vi":"Quảng Trường Letin",
         "ar":"",
         "it":"",
         "pl":"",
@@ -1303,7 +1303,7 @@
         "de":"",
         "jp":"",
         "pt":"",
-        "vi":"",
+        "vi":"Khu Rừng Đột Biến",
         "ar":"",
         "it":"",
         "pl":"",
@@ -1322,7 +1322,7 @@
         "de":"",
         "jp":"",
         "pt":"",
-        "vi":"",
+        "vi":"Lối Cầu Siêu",
         "ar":"",
         "it":"",
         "pl":"",
@@ -1341,7 +1341,7 @@
         "de":"",
         "jp":"",
         "pt":"",
-        "vi":"",
+        "vi":"Nghĩa Trang Khổ Đau",
         "ar":"",
         "it":"",
         "pl":"",
@@ -1360,7 +1360,7 @@
         "de":"",
         "jp":"",
         "pt":"",
-        "vi":"",
+        "vi":"Tàn Tích Khổ Đau",
         "ar":"",
         "it":"",
         "pl":"",
@@ -1379,7 +1379,7 @@
         "de":"",
         "jp":"",
         "pt":"",
-        "vi":"",
+        "vi":"Đồn Gai Góc",
         "ar":"",
         "it":"",
         "pl":"",
@@ -1398,7 +1398,7 @@
         "de":"",
         "jp":"",
         "pt":"",
-        "vi":"",
+        "vi":"Trang Viên Xảo Quyệt Tầng 1",
         "ar":"",
         "it":"",
         "pl":"",
@@ -1417,7 +1417,7 @@
         "de":"",
         "jp":"",
         "pt":"",
-        "vi":"",
+        "vi":"Khu Rừng Thần Bí Tầng 1",
         "ar":"",
         "it":"",
         "pl":"",
