Trial skill book + skill desc rework

--- a/Translation/item.json
+++ b/Translation/item.json
@@ -12102,6 +12102,63 @@
         "th":"",
         "id":"Skill Book [Nafas Beku]"
     },
+    "item.13101.name":{
+        "en":"Skill Book [Trial of Stamina]",
+        "fr":"Livre de Sort [Épreuve d'endurance]",
+        "es":"",
+        "zh-cn":"技能书 [耐力考验]",
+        "zh-tw":"",
+        "kr":"",
+        "ru":"Книга Навыков [Испытание на Выносливость]",
+        "tr":"",
+        "de":"Fähigkeitsbuch [Prüfung der Ausdaue]",
+        "jp":"",
+        "pt":"",
+        "vi":"Sách Kỹ Năng [Thách Thức Chịu Đựng]",
+        "ar":"",
+        "it":"",
+        "pl":"",
+        "th":"",
+        "id":"Skill Book [Ujian ketahanan]"
+    },
+    "item.13102.name":{
+        "en":"Skill Book [Trial of Power]",
+        "fr":"Livre de Sort [Épreuve de Puissance]",
+        "es":"",
+        "zh-cn":"技能书 [耐力考验]",
+        "zh-tw":"",
+        "kr":"",
+        "ru":"Книга Навыков [Испытание Силы]",
+        "tr":"",
+        "de":"Fähigkeitsbuch [Prüfung der Kraft]",
+        "jp":"",
+        "pt":"",
+        "vi":"Sách Kỹ Năng [Thách Thức Sức Mạnh]",
+        "ar":"",
+        "it":"",
+        "pl":"",
+        "th":"",
+        "id":"Skill Book [Ujian Kekuatan]"
+    },
+    "item.13103.name":{
+        "en":"Skill Book [Trial of Health]",
+        "fr":"Livre de Sort [Épreuve de Vie]",
+        "es":"",
+        "zh-cn":"技能书 [生命考验]",
+        "zh-tw":"",
+        "kr":"",
+        "ru":"Книга Навыков [Испытание Жизни]",
+        "tr":"",
+        "de":"Fähigkeitsbuch [Prüfung der Gesundheit]",
+        "jp":"",
+        "pt":"",
+        "vi":"Sách Kỹ Năng [Thách Thức Sinh Lực]",
+        "ar":"",
+        "it":"",
+        "pl":"",
+        "th":"",
+        "id":"Skill Book [Ujian Kehidupan]"
+    },
     "item.20000.name":{
         "en":"Military Food",
         "fr":"Nourriture Militaire",
