--- a/Translation/map.json
+++ b/Translation/map.json
@@ -1424,6 +1424,139 @@
         "th":"",
         "id":""
     },
+    "map.C3_Uncharted_Forest_Floor_2.name":{
+        "en":"Uncharted Forest Floor 2",
+        "fr":"Forêt Inexplorée Etage 2",
+        "es":"",
+        "zh-cn":"",
+        "zh-tw":"",
+        "kr":"",
+        "ru":"",
+        "tr":"",
+        "de":"",
+        "jp":"",
+        "pt":"",
+        "vi":"Khu Rừng Thần Bí Tầng 2",
+        "ar":"",
+        "it":"",
+        "pl":"",
+        "th":"",
+        "id":""
+    },
+    "map.C3_Uncharted_Forest_Floor_3.name":{
+        "en":"Uncharted Forest Floor 3",
+        "fr":"Forêt Inexplorée Etage 3",
+        "es":"",
+        "zh-cn":"",
+        "zh-tw":"",
+        "kr":"",
+        "ru":"",
+        "tr":"",
+        "de":"",
+        "jp":"",
+        "pt":"",
+        "vi":"Khu Rừng Thần Bí Tầng 3",
+        "ar":"",
+        "it":"",
+        "pl":"",
+        "th":"",
+        "id":""
+    },
+    "map.C3_Uncharted_Forest_Floor_4.name":{
+        "en":"Uncharted Forest Floor 4",
+        "fr":"Forêt Inexplorée Etage 4",
+        "es":"",
+        "zh-cn":"",
+        "zh-tw":"",
+        "kr":"",
+        "ru":"",
+        "tr":"",
+        "de":"",
+        "jp":"",
+        "pt":"",
+        "vi":"Khu Rừng Thần Bí Tầng 4",
+        "ar":"",
+        "it":"",
+        "pl":"",
+        "th":"",
+        "id":""
+    },
+    "map.C3_Uncharted_Forest_Floor_5.name":{
+        "en":"Uncharted Forest Floor 5",
+        "fr":"Forêt Inexplorée Etage 5",
+        "es":"",
+        "zh-cn":"",
+        "zh-tw":"",
+        "kr":"",
+        "ru":"",
+        "tr":"",
+        "de":"",
+        "jp":"",
+        "pt":"",
+        "vi":"Khu Rừng Thần Bí Tầng 5",
+        "ar":"",
+        "it":"",
+        "pl":"",
+        "th":"",
+        "id":""
+    },
+    "map.C3_Uncharted_Forest_Hall_Of_Elite.name":{
+        "en":"Uncharted Forest Hall of Elite",
+        "fr":"Forêt Inexplorée Hall d'Élite",
+        "es":"",
+        "zh-cn":"",
+        "zh-tw":"",
+        "kr":"",
+        "ru":"",
+        "tr":"",
+        "de":"",
+        "jp":"",
+        "pt":"",
+        "vi":"",
+        "ar":"",
+        "it":"",
+        "pl":"",
+        "th":"",
+        "id":""
+    },
+    "map.C3_Uncharted_Forest_Hall_Of_Elite_Deep.name":{
+        "en":"Uncharted Forest Hall of Elite Deep",
+        "fr":"Forêt Inexplorée Hall d'Élite Profond",
+        "es":"",
+        "zh-cn":"",
+        "zh-tw":"",
+        "kr":"",
+        "ru":"",
+        "tr":"",
+        "de":"",
+        "jp":"",
+        "pt":"",
+        "vi":"",
+        "ar":"",
+        "it":"",
+        "pl":"",
+        "th":"",
+        "id":""
+    },
+    "map.C3_Uncharted_Path.name":{
+        "en":"Uncharted Path",
+        "fr":"Chemin Inexplorée",
+        "es":"",
+        "zh-cn":"",
+        "zh-tw":"",
+        "kr":"",
+        "ru":"",
+        "tr":"",
+        "de":"",
+        "jp":"",
+        "pt":"",
+        "vi":"",
+        "ar":"",
+        "it":"",
+        "pl":"",
+        "th":"",
+        "id":""
+    },
     "map.Challenge_35.name":{
         "en":"Cain Knight's Trial Ground",
         "fr":"Zone d'entrainement des chevaliers de Kane",
