--- a/Translation/map.json
+++ b/Translation/map.json
@@ -1405,6 +1405,101 @@
         "th":"",
         "id":""
     },
+    "map.C3_Twisters_Manor_Floor_2.name":{
+        "en":"Twister's Manor Floor 2",
+        "fr":"",
+        "es":"",
+        "zh-cn":"",
+        "zh-tw":"",
+        "kr":"",
+        "ru":"",
+        "tr":"",
+        "de":"",
+        "jp":"",
+        "pt":"",
+        "vi":"Trang Viên Xảo Quyệt Tầng 2",
+        "ar":"",
+        "it":"",
+        "pl":"",
+        "th":"",
+        "id":""
+    },
+    "map.C3_Twisters_Manor_Floor_3.name":{
+        "en":"Twister's Manor Floor 3",
+        "fr":"",
+        "es":"",
+        "zh-cn":"",
+        "zh-tw":"",
+        "kr":"",
+        "ru":"",
+        "tr":"",
+        "de":"",
+        "jp":"",
+        "pt":"",
+        "vi":"Trang Viên Xảo Quyệt Tầng 3",
+        "ar":"",
+        "it":"",
+        "pl":"",
+        "th":"",
+        "id":""
+    },
+    "map.C3_Twisters_Manor_Floor_4.name":{
+        "en":"Twister's Manor Floor 4",
+        "fr":"",
+        "es":"",
+        "zh-cn":"",
+        "zh-tw":"",
+        "kr":"",
+        "ru":"",
+        "tr":"",
+        "de":"",
+        "jp":"",
+        "pt":"",
+        "vi":"Trang Viên Xảo Quyệt Tầng 4",
+        "ar":"",
+        "it":"",
+        "pl":"",
+        "th":"",
+        "id":""
+    },
+    "map.C3_Twisters_Manor_Hall_Of_Elite.name":{
+        "en":"Twister's Manor Floor Hall of Elite",
+        "fr":"",
+        "es":"",
+        "zh-cn":"",
+        "zh-tw":"",
+        "kr":"",
+        "ru":"",
+        "tr":"",
+        "de":"",
+        "jp":"",
+        "pt":"",
+        "vi":"",
+        "ar":"",
+        "it":"",
+        "pl":"",
+        "th":"",
+        "id":""
+    },
+    "map.C3_Twisters_Backyard.name":{
+        "en":"Twister's Backyard",
+        "fr":"",
+        "es":"",
+        "zh-cn":"",
+        "zh-tw":"",
+        "kr":"",
+        "ru":"",
+        "tr":"",
+        "de":"",
+        "jp":"",
+        "pt":"",
+        "vi":"",
+        "ar":"",
+        "it":"",
+        "pl":"",
+        "th":"",
+        "id":""
+    },
     "map.C3_Uncharted_Forest_Floor_1.name":{
         "en":"Uncharted Forest Floor 1",
         "fr":"Forêt Inexplorée Etage 1",
