--- a/Translation/map.json
+++ b/Translation/map.json
@@ -1388,7 +1388,7 @@
     },
     "map.C3_Twisters_Manor_Floor_1.name":{
         "en":"Twister's Manor Floor 1",
-        "fr":"",
+        "fr":"Manoir Méphitique Étage 1",
         "es":"",
         "zh-cn":"",
         "zh-tw":"",
@@ -1407,7 +1407,7 @@
     },
     "map.C3_Twisters_Manor_Floor_2.name":{
         "en":"Twister's Manor Floor 2",
-        "fr":"",
+        "fr":"Manoir Méphitique Étage 2",
         "es":"",
         "zh-cn":"",
         "zh-tw":"",
@@ -1426,7 +1426,7 @@
     },
     "map.C3_Twisters_Manor_Floor_3.name":{
         "en":"Twister's Manor Floor 3",
-        "fr":"",
+        "fr":"Manoir Méphitique Étage 3",
         "es":"",
         "zh-cn":"",
         "zh-tw":"",
@@ -1445,7 +1445,7 @@
     },
     "map.C3_Twisters_Manor_Floor_4.name":{
         "en":"Twister's Manor Floor 4",
-        "fr":"",
+        "fr":"Manoir Méphitique Étage 4",
         "es":"",
         "zh-cn":"",
         "zh-tw":"",
@@ -1464,7 +1464,7 @@
     },
     "map.C3_Twisters_Manor_Hall_Of_Elite.name":{
         "en":"Twister's Manor Floor Hall of Elite",
-        "fr":"",
+        "fr":"Manoir Méphitique Hall d'Élite",
         "es":"",
         "zh-cn":"",
         "zh-tw":"",
@@ -1483,7 +1483,7 @@
     },
     "map.C3_Twisters_Backyard.name":{
         "en":"Twister's Backyard",
-        "fr":"",
+        "fr":"Arrière-cour Méphitique",
         "es":"",
         "zh-cn":"",
         "zh-tw":"",
@@ -1502,7 +1502,7 @@
     },
     "map.C3_Uncharted_Forest_Floor_1.name":{
         "en":"Uncharted Forest Floor 1",
-        "fr":"Forêt Inexplorée Etage 1",
+        "fr":"Forêt Inexplorée Étage 1",
         "es":"",
         "zh-cn":"",
         "zh-tw":"",
@@ -1521,7 +1521,7 @@
     },
     "map.C3_Uncharted_Forest_Floor_2.name":{
         "en":"Uncharted Forest Floor 2",
-        "fr":"Forêt Inexplorée Etage 2",
+        "fr":"Forêt Inexplorée Étage 2",
         "es":"",
         "zh-cn":"",
         "zh-tw":"",
@@ -1540,7 +1540,7 @@
     },
     "map.C3_Uncharted_Forest_Floor_3.name":{
         "en":"Uncharted Forest Floor 3",
-        "fr":"Forêt Inexplorée Etage 3",
+        "fr":"Forêt Inexplorée Étage 3",
         "es":"",
         "zh-cn":"",
         "zh-tw":"",
@@ -1559,7 +1559,7 @@
     },
     "map.C3_Uncharted_Forest_Floor_4.name":{
         "en":"Uncharted Forest Floor 4",
-        "fr":"Forêt Inexplorée Etage 4",
+        "fr":"Forêt Inexplorée Étage 4",
         "es":"",
         "zh-cn":"",
         "zh-tw":"",
@@ -1578,7 +1578,7 @@
     },
     "map.C3_Uncharted_Forest_Floor_5.name":{
         "en":"Uncharted Forest Floor 5",
-        "fr":"Forêt Inexplorée Etage 5",
+        "fr":"Forêt Inexplorée Étage 5",
         "es":"",
         "zh-cn":"",
         "zh-tw":"",
